--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,6 +45,49 @@
             }
           ],
           "preLaunchTask": "Build setup"
+        },
+        {
+          "name": "Launch sandbox",
+          "type": "cppdbg",
+          "request": "launch",
+          "program": "${workspaceFolder}/cloudgate/sandbox.exe",
+          "args": [],
+          "stopAtEntry": false,
+          "cwd": "${workspaceFolder}/cloudgate",
+          "environment": [],
+          "externalConsole": false,
+          "MIMode": "gdb",
+          "miDebuggerPath": "C:/msys64/mingw64/bin/gdb.exe",
+          "setupCommands": [
+            {
+              "description": "Enable pretty-printing for gdb",
+              "text": "-enable-pretty-printing",
+              "ignoreFailures": true
+            }
+          ],
+          "preLaunchTask": "Build sandbox",
+          "postDebugTask": "Run plot_positions.py"
+        },
+        {
+          "name": "Launch streaming demo",
+          "type": "cppdbg",
+          "request": "launch",
+          "program": "${workspaceFolder}/cloudgate/streaming_demo.exe",
+          "args": [],
+          "stopAtEntry": false,
+          "cwd": "${workspaceFolder}/cloudgate",
+          "environment": [],
+          "externalConsole": false,
+          "MIMode": "gdb",
+          "miDebuggerPath": "C:/msys64/mingw64/bin/gdb.exe",
+          "setupCommands": [
+            {
+              "description": "Enable pretty-printing for gdb",
+              "text": "-enable-pretty-printing",
+              "ignoreFailures": true
+            }
+          ],
+          "preLaunchTask": "Build streaming demo"
         }
       ]
 }
