streaming_demo.cpp now running with auto plotting for debug

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -87,7 +87,8 @@
               "ignoreFailures": true
             }
           ],
-          "preLaunchTask": "Build streaming demo"
+          "preLaunchTask": "Build streaming demo",
+          "postDebugTask": "Run plot_positions.py"
         }
       ]
 }
