minor updates to motor_actuator, realized that i need to make a class for the motion control functions and then start all together

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -67,6 +67,7 @@
         "command": "g++",
         "args": [
             "-g",
+            "-pg",  // Enable profiling
             "-D_WINDOWS",  // Required for proper macro definition
             "${workspaceFolder}/cloudgate-src/sandbox.cpp",
             "-o",
