--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -47,6 +47,27 @@
           "preLaunchTask": "Build setup"
         },
         {
+          "name": "Launch wind winch",
+          "type": "cppdbg",
+          "request": "launch",
+          "program": "${workspaceFolder}/cloudgate/wind_winch.exe",
+          "args": [],
+          "stopAtEntry": false,
+          "cwd": "${workspaceFolder}/cloudgate",
+          "environment": [],
+          "externalConsole": false,
+          "MIMode": "gdb",
+          "miDebuggerPath": "C:/msys64/mingw64/bin/gdb.exe",
+          "setupCommands": [
+            {
+              "description": "Enable pretty-printing for gdb",
+              "text": "-enable-pretty-printing",
+              "ignoreFailures": true
+            }
+          ],
+          "preLaunchTask": "Build wind winch"
+        },
+        {
           "name": "Launch sandbox",
           "type": "cppdbg",
           "request": "launch",
