first demo of square and circle pattern in xy, plots actuator setpoints in counts dervied from the setpoints in meters along the actuator actuals

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -140,6 +140,25 @@
         }
     },
     {
+        "label": "Run plot_positions_xy.py",
+        "type": "shell",
+        "command": "cmd.exe",
+        "args": [
+            "/c",
+            "${workspaceFolder}\\.venv\\Scripts\\activate && python ${workspaceFolder}\\utils\\plot_positions_xy.py"
+        ],
+        "options": {
+            "cwd": "${workspaceFolder}"
+        },
+        "problemMatcher": [
+            "$python"
+        ],
+        "group": {
+            "kind": "test",
+            "isDefault": true
+        }
+    },
+    {
         "label": "Build streaming demo",
         "type": "shell",
         "command": "g++",
@@ -150,6 +169,36 @@
             "${workspaceFolder}/cloudgate-src/motor_actuator.cpp",
             "-o",
             "${workspaceFolder}/cloudgate/streaming_demo",
+            "-I",
+            "${workspaceFolder}/uirSDKfiles",
+            "-L",
+            "${workspaceFolder}/UirSdkLib",
+            "-l",
+            "libUirSdkWin64",
+            "-mconsole" // Specify console application
+        ],
+        "options": {
+            "cwd": "${workspaceFolder}",
+        },
+        "problemMatcher": [
+            "$gcc"
+        ],
+        "group": {
+            "kind": "build",
+            "isDefault": true
+        }
+    },
+    {
+        "label": "Build puppet demo",
+        "type": "shell",
+        "command": "g++",
+        "args": [
+            "-g",
+            "-D_WINDOWS",  // Required for proper macro definition
+            "${workspaceFolder}/cloudgate-src/puppet_demo.cpp",
+            "${workspaceFolder}/cloudgate-src/motor_actuator.cpp",
+            "-o",
+            "${workspaceFolder}/cloudgate/puppet_demo",
             "-I",
             "${workspaceFolder}/uirSDKfiles",
             "-L",
