--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -110,6 +110,28 @@
           ],
           "preLaunchTask": "Build streaming demo",
           "postDebugTask": "Run plot_positions.py"
+        },
+        {
+          "name": "Launch puppet demo",
+          "type": "cppdbg",
+          "request": "launch",
+          "program": "${workspaceFolder}/cloudgate/puppet_demo.exe",
+          "args": [],
+          "stopAtEntry": false,
+          "cwd": "${workspaceFolder}/cloudgate",
+          "environment": [],
+          "externalConsole": false,
+          "MIMode": "gdb",
+          "miDebuggerPath": "C:/msys64/mingw64/bin/gdb.exe",
+          "setupCommands": [
+            {
+              "description": "Enable pretty-printing for gdb",
+              "text": "-enable-pretty-printing",
+              "ignoreFailures": true
+            }
+          ],
+          "preLaunchTask": "Build puppet demo",
+          "postDebugTask": "Run plot_positions_xy.py"
         }
       ]
 }
